Fix padding on account row to avoid shift on open (#974)

--- a/app/style/AccountRow.less
+++ b/app/style/AccountRow.less
@@ -90,7 +90,7 @@
   background-size: 10px auto;
   background-repeat: no-repeat;
   cursor: pointer;
-  padding-top: 1px;
+  padding-top: 0.5em;
 }
 
 .account-row-details-top:hover {
